test/mutation_analysis/s0415_add_strings/hafis/ablation_o3_r50/mutants/24/result.txt
./test/mutation_analysis/s0415_add_strings/hafis/ablation_o3_r50/mutants/24/Solution.java:31: error: unreachable statement
        return result.reverse().toString();
        ^
1 error
